--- a/src/components/appliance/Appliance_information.module.css
+++ b/src/components/appliance/Appliance_information.module.css
@@ -1,7 +1,18 @@
 #body{
-    background-color: red;
+    margin: 1rem 10rem;
+    padding: 0;
 }
 
 #title{
-    color: blue;
+    font-size: 2rem;
+    margin: 1.5rem auto;
+}
+
+#description{
+    margin-bottom: auto;
+}
+
+#list{
+    list-style-type: circle;
+    margin: 1rem 3rem;
 }
