--- a/src/globals.css
+++ b/src/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -22,6 +23,6 @@
 }
 
 body {
-  
+  font-family: 'Ubuntu', sans-serif;
 }
 
