--- a/src/globals.css
+++ b/src/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -24,5 +26,5 @@
 
 body {
   font-family: 'Ubuntu', sans-serif;
+  background-color: #131620;
 }
-
