--- a/src/components/about_us/Members.module.css
+++ b/src/components/about_us/Members.module.css
@@ -1,15 +1,11 @@
-#titel {
-    color: rgb(152, 29, 124);
-    font-family:  Arial, Helvetica, sans-serif ;
-    font-size: 22px;
-    text-align: center;
-}
+
 
 #titel2 {
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(38, 38, 69);
+    color: black;
     font-size: 40px;
     text-align: center;
+    background-color: white;
     
 }
 
@@ -18,13 +14,10 @@
     width: 250px;
     height: 250px;
     object-fit: cover;
-    
-    
-    
 }
 
 .memberName {
-    color: white;
+    color: rgb(89, 89, 89);
     font-size: 20px;
     margin-left:20px;
 }
@@ -41,8 +34,46 @@
 .styremedlemmer {
     display: flex;
     flex-wrap: wrap;
-    gap: 110px;
+    gap: 50px;
     flex-grow: 1;
     justify-content: center;
+    padding: 100px;
+    background-color: #f9f9f9;
+    font-family: Arial, Helvetica, sans-serif;
 
     }
+
+.accordion {
+    border-radius: 4px;
+    margin-bottom: 8px;
+}
+
+.accordionHeader {
+    display: flex;
+    justify-content: space-between;
+    padding: 8px 16px;
+    cursor: pointer;
+
+}
+
+.accordionContent {
+    padding: 8px 16px;
+    border-top: 1px solid #ccc;
+}
+
+.omFondet {
+    background: #0B5374;
+    padding: 200px;
+    height: auto;
+    color: white;
+    text-align: left;
+    text-align: justify;
+}
+
+.omFondet h1 {
+    font-size: 40px;
+}
+
+.omFondet p {
+    font-size: 16px;
+}
