--- a/src/components/all/navbar.module.css
+++ b/src/components/all/navbar.module.css
@@ -16,6 +16,7 @@
     top: 0px;
     --tw-bg-opacity: 1;
     background-color: rgb(19 22 32 / var(--tw-bg-opacity));
+    z-index: 2;
 }
 
 .navbar img {
@@ -43,6 +44,14 @@
 }
 
 .hidden {
-    visibility: collapse;
-    top: -100px;
+    opacity: 0;
+    width: 100%;
+    height: 5rem;
+    margin-bottom: 1.25rem;
+    position: sticky;
+    top: 0px;
+    --tw-bg-opacity: 1;
+    background-color: rgb(19 22 32 / var(--tw-bg-opacity));
+    z-index: 2;
+
 }
