--- a/src/components/home/Splash.module.css
+++ b/src/components/home/Splash.module.css
@@ -17,13 +17,14 @@
 /* Legg til disse stilene i din CSS-fil */
 .img-container {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: center !important;
+    align-items: center !important;
+    max-width: 100%;
   }
   
   .imgFadeIn {
     animation: fadeIn 1s ease-out forwards;
-    max-width: 100%; /* Forhindrer at bildet strekker seg for bredt */
+    width: 90%; /* Forhindrer at bildet strekker seg for bredt */
     height: auto; 
   }
   
@@ -34,17 +35,12 @@
 
 /* Legg til disse stilene i din CSS-fil */
 #tekst {
-    font-size: 128px;
+    font-size: 150px;
     color: white;
     letter-spacing: 0.05em;
     font-family: "Playfair Display SC";
     position: absolute;
   }
   
-  @media (max-width: 768px) {
-    /* Reduser fontstørrelsen for mindre skjermer */
-    #tekst {
-      font-size: 64px;
-    }
-  }
+
   
