--- a/src/components/about_us/Members.module.css
+++ b/src/components/about_us/Members.module.css
@@ -2,7 +2,7 @@
 
 #titel2 {
     font-family: Arial, Helvetica, sans-serif;
-    color: black;
+    color: rgb(47, 72, 117);
     font-size: 40px;
     text-align: center;
     background-color: white;
@@ -44,8 +44,11 @@
     }
 
 .accordion {
-    border-radius: 4px;
     margin-bottom: 8px;
+    width: 100%;
+    border: 1px solid rgb(115, 115, 115);
+    position: relative;
+    color: #33426f;
 }
 
 .accordionHeader {
@@ -53,27 +56,71 @@
     justify-content: space-between;
     padding: 8px 16px;
     cursor: pointer;
+    background-color: #f4f4f4;
 
 }
 
 .accordionContent {
     padding: 8px 16px;
-    border-top: 1px solid #ccc;
+    font-size: 20px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    background-color: #EDF6FF;
 }
+
+.accordionContent div {
+    width: 50%;
+    padding: 10px;
+}
+
 
 .omFondet {
     background: #0B5374;
-    padding: 200px;
     height: auto;
     color: white;
     text-align: left;
     text-align: justify;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
 }
 
 .omFondet h1 {
     font-size: 40px;
+    z-index: 2;
+    
 }
 
 .omFondet p {
     font-size: 16px;
+    z-index: 2;
+    overflow: hidden;
+    
+}
+
+.omOssWrapper {
+    width: 50%;
+    position: relative;
+    padding: 50px;
+}
+
+
+
+.ossBilde {
+    object-fit: cover;
+    clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
+    height: 500px;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    
+    
+}
+
+.tidligereMedlemmerWrapper {
+    width: 60%;
+    left: 20%;
+    position: relative;
 }
