--- a/src/components/about_us/Members.module.css
+++ b/src/components/about_us/Members.module.css
@@ -2,10 +2,9 @@
 
 #titel2 {
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(47, 72, 117);
+    color: rgb(255, 255, 255);
     font-size: 40px;
     text-align: center;
-    background-color: white;
     
 }
 
@@ -17,7 +16,7 @@
 }
 
 .memberName {
-    color: rgb(89, 89, 89);
+    color: rgb(255, 255, 255);
     font-size: 20px;
     margin-left:20px;
 }
@@ -29,6 +28,7 @@
     align-items: center;
     text-align: center;
     width: fit-content;
+    
 }
 
 .styremedlemmer {
@@ -38,8 +38,8 @@
     flex-grow: 1;
     justify-content: center;
     padding: 100px;
-    background-color: #f9f9f9;
     font-family: Arial, Helvetica, sans-serif;
+    
 
     }
 
@@ -48,7 +48,7 @@
     width: 100%;
     border: 1px solid rgb(115, 115, 115);
     position: relative;
-    color: #33426f;
+    color: #e1e1e1;
 }
 
 .accordionHeader {
@@ -56,7 +56,6 @@
     justify-content: space-between;
     padding: 8px 16px;
     cursor: pointer;
-    background-color: #f4f4f4;
 
 }
 
@@ -67,7 +66,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     flex-grow: 1;
-    background-color: #EDF6FF;
+    
 }
 
 .accordionContent div {
@@ -121,4 +120,5 @@
     width: 60%;
     left: 20%;
     position: relative;
+    background-color: rgb(32, 32, 32);
 }
