--- a/src/components/about_us/Members.module.css
+++ b/src/components/about_us/Members.module.css
@@ -49,7 +49,7 @@
     position: relative;
     color: #ffffff;
     border-radius: 10px;
-    background-color: #232427;
+    background-color: #1f384b;
 }
 
 .accordionHeader {
@@ -128,7 +128,7 @@
 
 .accordionHeader span {
     margin-top: 1rem;
-    font-size: 7px;
+    font-size: 40px;
 }
 
 .accordionTitle {
