--- a/src/components/about_us/Members.module.css
+++ b/src/components/about_us/Members.module.css
@@ -49,7 +49,7 @@
     position: relative;
     color: #ffffff;
     border-radius: 10px;
-    background-color: #1f384b;
+    background-color: #072e40;
 }
 
 .accordionHeader {
@@ -94,12 +94,12 @@
 
 .omFondet {
     height: auto;
-    color: white;
-    text-align: left;
-    text-align: justify;
-    position: relative;
-    display: flex;
-    justify-content: space-between;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    width: 80%;
+    margin: auto;
+   
+    
 }
 
 .omFondet h1 {
@@ -110,11 +110,14 @@
 .omFondet p {
     font-size: 16px;
     overflow: hidden;
+    font-size: 20px;
+    text-align: left;
+    line-height: 2.2rem;
     
 }
 
 .omOssWrapper {
-    width: 50%;
+    width: 100%;
     position: relative;
     padding: 50px;
 }
@@ -123,7 +126,7 @@
 
 .ossBilde {
     object-fit: cover;
-    clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
+    
     height: 500px;
     width: 100%;
     padding: 0;
@@ -146,4 +149,13 @@
 
 .accordionTitle {
    margin-top: 0.5rem;
+}
+
+
+.horizontalline {
+    width: 100%;
+    height: 1px;
+    background-color: #E5E5E5;
+    margin-top: 50px;
+    margin-bottom: 20px;
 }
