--- a/src/components/about_us/Members.module.css
+++ b/src/components/about_us/Members.module.css
@@ -137,9 +137,9 @@
 }
 
 .tidligereMedlemmerWrapper {
-    width: 60%;
-    left: 20%;
+    width: 70%;
     position: relative;
+    margin: auto;
     
 }
 
@@ -165,5 +165,11 @@
 @media only screen and (max-width: 750px) {
     .omOssWrapper {
       width: 100%;
+    }
+  }
+
+  @media only screen and (max-width: 657px) {
+    .tidligereMedlemmerWrapper {
+      width: 80%;
     }
   }
