--- a/src/components/about_us/Members.module.css
+++ b/src/components/about_us/Members.module.css
@@ -45,9 +45,12 @@
 .accordion {
     margin-bottom: 8px;
     width: 100%;
-    border: 1px solid rgb(115, 115, 115);
+    border: 1px solid #333b54;
+    
     position: relative;
-    color: #e1e1e1;
+    color: #ffffff;
+    border-radius: 10px;
+    background-color: #1c202d;
 }
 
 .accordionHeader {
@@ -55,34 +58,48 @@
     justify-content: space-between;
     padding: 8px 16px;
     cursor: pointer;
+   
 
 }
 
 .accordionContent {
-    padding: 8px 16px;
+    height: 250px;
     font-size: 20px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     flex-grow: 1;
+    transition: height 0.3s ease-in-out;
+    overflow: hidden;
+    
+    
     
 }
 
-.accordionContent div {
+.accordionContentClosed {
+    height: 0px;
+    font-size: 20px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    transition: height 0.3s ease-in-out;
+    overflow: hidden;
+}
+
+.accordionContent div, .accordionContentClosed div {
     width: 50%;
     padding: 10px;
 }
 
 
 .omFondet {
-    background: #0B5374;
     height: auto;
-    color: white;
-    text-align: left;
-    text-align: justify;
-    position: relative;
-    display: flex;
-    justify-content: space-between;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    
+   
+    
 }
 
 .omFondet h1 {
@@ -93,20 +110,24 @@
 .omFondet p {
     font-size: 16px;
     overflow: hidden;
+    font-size: 20px;
+    text-align: left;
+    line-height: 2.2rem;
     
 }
 
 .omOssWrapper {
-    width: 50%;
+    width: 80%;
     position: relative;
     padding: 50px;
+    margin: auto;
 }
 
 
 
 .ossBilde {
     object-fit: cover;
-    clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
+    
     height: 500px;
     width: 100%;
     padding: 0;
@@ -116,8 +137,39 @@
 }
 
 .tidligereMedlemmerWrapper {
-    width: 60%;
-    left: 20%;
+    width: 70%;
     position: relative;
-    background-color: rgb(32, 32, 32);
+    margin: auto;
+    
 }
+
+.accordionHeader span {
+    margin-top: 1rem;
+    font-size: 40px;
+}
+
+.accordionTitle {
+   margin-top: 0.5rem;
+}
+
+
+.horizontalline {
+    width: 100%;
+    height: 1px;
+    background-color: #E5E5E5;
+    margin-top: 50px;
+    margin-bottom: 20px;
+}
+
+
+@media only screen and (max-width: 750px) {
+    .omOssWrapper {
+      width: 100%;
+    }
+  }
+
+  @media only screen and (max-width: 657px) {
+    .tidligereMedlemmerWrapper {
+      width: 80%;
+    }
+  }
