--- a/src/components/soknad/SoknadPage.module.css
+++ b/src/components/soknad/SoknadPage.module.css
@@ -4,26 +4,20 @@
     list-style: none;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+    margin-top: 2rem;
     width: 100%;
     height: 100%;
-
-   
+    text-align: left;
 }
 
 .ul li {
-   
     list-style-type: disc;
     color: #FFF;
-    
     font-family: 'Inter', sans-serif;
-    font-size: 25px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
-    
     margin-top: 40px;
-
-    }
+    margin: 1rem 11rem;
+}
