--- a/src/components/all/navbar.module.css
+++ b/src/components/all/navbar.module.css
@@ -7,6 +7,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    font-size: 20px;
 
 }
 .navbar_box{
@@ -29,7 +30,7 @@
 
 .navbar .menu {
     display: flex;
-    gap: 80px;
+    gap: 15%;
     margin: 0 auto;
     color: white;
 
