removed donut chart when screen is small

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -22,3 +22,9 @@
     margin: 0%;
     font-size: 18px;
 }
+@media only screen and (max-width: 570px) {
+    #donut {
+        display: none !important;
+    }
+
+}
