--- a/src/components/appliance/Paragraph.module.css
+++ b/src/components/appliance/Paragraph.module.css
@@ -1,11 +1,11 @@
 .paragraph {
     color: #FFF;
-    text-align: left;
+    /* text-align: left; */
     font-family: 'Inter', sans-serif;
     font-size: 20px;
     font-style: normal;
     line-height: normal;
     margin-top: 40px;
-    width: 80%;
+    /* width: 80%; */
     line-height: 2.2rem;
 }
