--- a/src/components/appliance/Title.module.css
+++ b/src/components/appliance/Title.module.css
@@ -2,8 +2,8 @@
     text-align: center;
     color: #FFF;
     font-family: 'Inter', sans-serif;
-    margin-top: 60px;
+    /* margin-top: 60px; */
     font-size: 40px;
-    font-style: normal;
-    line-height: normal;
+    /* font-style: normal;
+    line-height: normal; */
 }
