--- a/src/components/soknad/SoknadPage.module.css
+++ b/src/components/soknad/SoknadPage.module.css
@@ -1,3 +1,9 @@
+#soknadWrapper {
+    width: 80%;
+    padding: 50px;
+    /* background-color: aqua !important; */
+}
+
 .ul {
     margin: 0;
     padding: 0;
@@ -18,23 +24,23 @@
     font-style: normal;
     line-height: normal;
     margin-top: 40px;
-    margin: 1rem 11rem;
+    margin: 1rem 4rem;
 }
 
 @media only screen and (max-width: 1000px){
     .ul li {
-        margin: 1rem 8rem;
+        margin: 1rem 3rem;
     }
 }
 
 @media only screen and (max-width: 500px){
     .ul li {
-        margin: 1rem 6rem;
+        margin: 1rem 2rem;
     }
 }
 
 @media only screen and (max-width: 300px){
     .ul li {
-        margin: 1rem 3rem;
+        margin: 1rem 1rem;
     }
 }
