--- a/src/components/soknad/SoknadPage.module.css
+++ b/src/components/soknad/SoknadPage.module.css
@@ -34,9 +34,13 @@
 }
 
 @media only screen and (max-width: 500px){
+    #soknadWrapper {
+        width: 100%;
+    }
     .ul li {
         margin: 1rem 2rem;
     }
+
 }
 
 @media only screen and (max-width: 300px){
