--- a/src/components/all/navbar.module.css
+++ b/src/components/all/navbar.module.css
@@ -1,5 +1,6 @@
 /* CSS file: styles.css */
 
+    
 .navbar {
     height: 100%;
     width: 100%;
@@ -9,10 +10,12 @@
     padding: 20px;
     font-size: 20px;
     justify-content: center;
-
+    background-color: #131620;
+    
 
 }
 .navbar_box{
+    
     width: 100%;
     height: 5rem;
     margin-bottom: 1.25rem;
@@ -21,6 +24,7 @@
     --tw-bg-opacity: 1;
     background-color: rgb(19 22 32 / var(--tw-bg-opacity));
     z-index: 2;
+   
 }
 
 .navbar img {
@@ -42,7 +46,14 @@
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     padding-top: 4px;
+
 }
+
+.navbar .menu a:hover {
+    color: #cccccc;
+    
+}
+
 
 .navbar .spacer {
     width: 144px;
@@ -51,6 +62,7 @@
 }
 
 .hidden {
+    
     opacity: 0;
     width: 100%;
     height: 5rem;
@@ -60,6 +72,9 @@
     --tw-bg-opacity: 1;
     background-color: rgb(19 22 32 / var(--tw-bg-opacity));
     z-index: 2;
+    visibility: hidden;
+    
+
 
 }
 
