--- a/src/components/about_us/Members.module.css
+++ b/src/components/about_us/Members.module.css
@@ -59,6 +59,12 @@
     padding: 8px 16px;
     cursor: pointer;
    
+}
+
+.accordionHeader span {
+    display: flex;
+    align-items: center;
+    margin: 0 !important;
 
 }
 
