--- a/src/components/all/navbar.module.css
+++ b/src/components/all/navbar.module.css
@@ -13,6 +13,7 @@
 
 }
 .navbar_box{
+    transition: 0.2s;
     width: 100%;
     height: 5rem;
     margin-bottom: 1.25rem;
@@ -33,16 +34,24 @@
 .navbar .menu {
     display: flex;
     margin: 0 auto;
-    color: white;
+    color: rgb(255, 255, 255);
 
 }
 
+
+.menuItem:hover {
+   color: #FAB759;
+    
+}
+
+
 .navbar .menu p {
-    color: white;
+    color: rgb(255, 255, 255);
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     padding-top: 4px;
 }
+
 
 .navbar .spacer {
     width: 144px;
@@ -50,10 +59,14 @@
     
 }
 
+
+
 .hidden {
+    transition: 0.2s;
+    overflow: hidden;
     opacity: 0;
-    width: 100%;
     height: 5rem;
+    width: 100%;
     margin-bottom: 1.25rem;
     position: sticky;
     top: 0px;
@@ -78,7 +91,8 @@
 
 
 .menuItem {
-    padding: 30px;
+    padding: 10px 40px 20px;
+    transition: 0.05s ease-in-out;
 }
 
 
