--- a/src/components/all/navbar.module.css
+++ b/src/components/all/navbar.module.css
@@ -15,7 +15,7 @@
 
 }
 .navbar_box{
-    
+    transition: 0.2s;
     width: 100%;
     height: 5rem;
     margin-bottom: 1.25rem;
@@ -37,12 +37,19 @@
 .navbar .menu {
     display: flex;
     margin: 0 auto;
-    color: white;
+    color: rgb(255, 255, 255);
 
 }
 
+
+.menuItem:hover {
+   color: #FAB759;
+    
+}
+
+
 .navbar .menu p {
-    color: white;
+    color: rgb(255, 255, 255);
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     padding-top: 4px;
@@ -61,11 +68,14 @@
     
 }
 
+
+
 .hidden {
-    
+    transition: 0.2s;
+    overflow: hidden;
     opacity: 0;
-    width: 100%;
     height: 5rem;
+    width: 100%;
     margin-bottom: 1.25rem;
     position: sticky;
     top: 0px;
@@ -92,6 +102,8 @@
 
 
 .menuItem {
+    padding: 10px 40px 20px;
+    transition: 0.05s ease-in-out;
     padding: 10px;
     padding-left: 30px;
     padding-right: 30px;
