Installed prettier and formatted all files

--- a/src/components/appliance/Title.module.css
+++ b/src/components/appliance/Title.module.css
@@ -1,9 +1,9 @@
-#header{
-    text-align: center;
-    color: #FFF;
-    font-family: 'Inter', sans-serif;
-    /* margin-top: 60px; */
-    font-size: 40px;
-    /* font-style: normal;
+#header {
+  text-align: center;
+  color: #fff;
+  font-family: "Inter", sans-serif;
+  /* margin-top: 60px; */
+  font-size: 40px;
+  /* font-style: normal;
     line-height: normal; */
 }
