--- a/src/components/appliance/HorizontalLine.module.css
+++ b/src/components/appliance/HorizontalLine.module.css
@@ -1,7 +1,7 @@
 .line {
-    /* width: 80%; */
-    height: 1px;
-    background-color: #E5E5E5;
-    margin-top: 50px;
-    margin-bottom: 20px;
+  /* width: 80%; */
+  height: 1px;
+  background-color: #e5e5e5;
+  margin-top: 50px;
+  margin-bottom: 20px;
 }
