--- a/src/components/appliance/SubTitle.module.css
+++ b/src/components/appliance/SubTitle.module.css
@@ -1,11 +1,11 @@
-#header{
-    text-align: center;
-    color: #FFF;
-    text-align: center;
-    font-family: 'Inter', sans-serif;
-    font-size: 30px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: normal;
-    margin-top: 45px;
+#header {
+  text-align: center;
+  color: #fff;
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin-top: 45px;
 }
