--- a/src/components/home/PeriodBar.module.css
+++ b/src/components/home/PeriodBar.module.css
@@ -1,12 +1,11 @@
 .period_bar_container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
-
 .period_button {
-    color: #ffffff !important;
-    background-color: #0B5374 !important;
-    margin-top: 5px !important;
+  color: #ffffff !important;
+  background-color: #0b5374 !important;
+  margin-top: 5px !important;
 }
